--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">code</string>
+    <string name="click_buttons_for_events">Click Buttons For Events</string>
+    <string name="event_1">Event-1</string>
+    <string name="event_2">Event-2</string>
 </resources>
